<?xml version="1.0"?>
<package format="3">
  <name>roa_policy_controller</name>
  <version>0.0.1</version>
  <description>ros2_control controller plugin for ROA policy inference</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>roa_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>